fix overflow-x from window

--- a/Frontend/src/app/components/products-area/categories/categories.component.css
+++ b/Frontend/src/app/components/products-area/categories/categories.component.css
@@ -2,30 +2,20 @@
   overflow-y: hidden;
   overflow-x: scroll;
   height: fit-content;
-  width: 100%;
   display: flex;
   justify-content: space-between;
-  position: relative;
   margin-bottom: 20px;
+  max-width: 65vw;
 }
 
 .categoriesCard{
-    padding: auto;
-    min-width: fit-content;
-    background-color: transparent;
-    font-size: larger;
+  padding: auto;
+  min-width: fit-content;
+  background-color: transparent;
+  font-size: larger;
 }
 
 .active{
   font-weight: bolder;
   text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5);
-  /* border-bottom: 1px solid gray; */
-}
-
-hr{
-  position: absolute;
-  right: 5px;
-  bottom: 5px;
-  font-weight: 900;
-  text-shadow: -5px -2px 4px gray;
 }
