--- a/Frontend/src/app/components/products-area/product-list/product-list.component.css
+++ b/Frontend/src/app/components/products-area/product-list/product-list.component.css
@@ -1,7 +1,4 @@
 .productsList{
     display: flex;
     flex-wrap: wrap;
-    overflow-y: scroll;
-    max-height: 100%;
-    /* justify-content: ; */
 }
